@@ -63,12 +63,11 @@ For Win32 there is a Microsoft Visual C++ compatible makefile in the <B>Win32\</
 directory and a MSDOS batch file in the top level directory of the distribution. 
 </P>
 <P>
-To build the examples programs you will need to download and compile
-	<A HREF="http://www.mega-nerd.com/libsndfile/">libsndfile</A>
-and there are instructions for compiling it on Win32
-	<A HREF="http://www.mega-nerd.com/libsndfile/win32.html">here</A>.
-This is optional as SecretRabbitCode can be compiled and used with installing 
-libsndfile.
+To build the examples programs you will need to download the precompiled
+win32 or win64
+	<A HREF="http://www.mega-nerd.com/libsndfile/#Download">libsndfile</A>
+binary and install them.
+
 </P>
 <P>
 Making the libsamplerate DLL on Win32 involves the following:
@@ -84,12 +83,13 @@ Making the libsamplerate DLL on Win32 involves the following:
 		    path to point to the location of MSVC++ on your machine. This allows the
 			makefile to inform the compiler of the location of the standard header
 			files.
-    <LI> Copy <B>libsndfile.dll</B> and <B>libsndfile.lib</B> from the directory
-			libsndfile was compiled in to the the directory containing libsamplerate.
-    <LI> Copy the header file <B>Win32/sndfile.h</B> to the <B>Win32</B> directory
-			under the libsamplerate directory.
-	<LI> Open a DOS window (Win9X) or Command Shell (WinNT and WinXP?) and cd into 
-			the libsamplerate-0.X.Y directory.
+    <LI> Copy <B>libsndfile-1.dll</B>, <B>libsndfile-1.lib</B> and
+			<B>libsndfile-1.def</B> from the directory libsndfile was installed in
+			to the the directory containing libsamplerate.
+    <LI> Copy the header file <B>include/sndfile.h</B> from where libsndfile was
+			installed to the <B>Win32</B> directory under the libsamplerate
+			directory.
+	<LI> Open a Command Shell and cd into the libsamplerate-0.X.Y directory.
 	<LI> Make sure that the program <B>nmake</B> (which is part of the MSCV++ 
 			package) is in a directory which is part of your <B>PATH</B> variable.
 	<LI> Type in the command 
