@@ -1,3 +1,8 @@
+2009-12-01  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * doc/win32.html
+    Update instructions.
+
 2009-11-29  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/common.h
